Some improvements and added files

--- a/config.ini
+++ b/config.ini
@@ -3,3 +3,7 @@ host = 'mysql:host=localhost;port=8888;dbname=';
 un = 'root';
 pw = 'Mojitestdrive';
 db = 'mailman';
+
+/* obviously this file is setup for testing
+and should never publicly show any password you use in real life for security purposes
+This file should also not be stored in any publicly accessible location when going live and be chmodded accordingly */
